src/objects/API_Version__c.object
<CustomObject>
    <description>Custom Object for API Versions Master-Detail to API Policies, Endpoints and Log Entries</description>
    <fields>
        <fullName>Access_Limit_Policy_Count__c</fullName>
        <description>Count of the number of Access Limit Policies for the API Version. If 1 is found it enforces an Access Limit for all.</description>
        <label>Access Limit Policy Count</label>
        <summaryFilterItems>
            <field>API_Policy__c.Type__c</field>
            <operation>equals</operation>
            <value>Access Limit Policy</value>
        </summaryFilterItems>
        <summaryForeignKey>API_Policy__c.API_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to Activate API</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Content_Types__c</fullName>
        <description>Allowed Content Types for the API Version. Content Type is required to respond.</description>
        <label>Allowed Content Types</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JSON</fullName>
                    <default>true</default>
                    <label>JSON</label>
                </value>
                <value>
                    <fullName>XML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authentication_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to control Authentication Policy for the API Version</description>
        <label>Authentication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the API Version used for Documentation Generation</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Enforce_Access_Limit_Policy__c</fullName>
        <description>If we have more than zero access limit policies then we are going to enforce access limits.</description>
        <formula>Access_Limit_Policy_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforce Access Limit Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_ETag_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When flagged the API Version will require &quot;ETag&quot; or &quot;If-None-Match&quot; headers to be present on each request</description>
        <label>Enforce ETag Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Restrictive_Time_Policy__c</fullName>
        <description>If we have more than zero restrictive time policies then we are going to enforce restrictive time.</description>
        <formula>Restrictive_Time_Policy_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforce Restrictive Time Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Whitelist_Policy__c</fullName>
        <description>If we have more than zero whitelist policies then we are going to enforce whitelisting.</description>
        <formula>Whitelist_Policy_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enforce Whitelist Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_API_Access__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Log API Access by creating API_Log_Entry__c records</description>
        <label>Log API Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restrictive_Time_Policy_Count__c</fullName>
        <description>Count of the number of Restrictive Time Policies for the API Version. If 1 is found it enforces a Restrictive Time for all.</description>
        <label>Restrictive Time Policy Count</label>
        <summaryFilterItems>
            <field>API_Policy__c.Type__c</field>
            <operation>equals</operation>
            <value>Restrictive Time Policy</value>
        </summaryFilterItems>
        <summaryForeignKey>API_Policy__c.API_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Whitelist_Policy_Count__c</fullName>
        <description>Count of the number of Whitelist Policies for the API Version. If 1 is found it enforces Whitelisting for all.</description>
        <label>Whitelist Policy Count</label>
        <summaryFilterItems>
            <field>API_Policy__c.Type__c</field>
            <operation>equals</operation>
            <value>Whitelist Policy</value>
        </summaryFilterItems>
        <summaryForeignKey>API_Policy__c.API_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>API Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>v{0}</displayFormat>
        <label>API Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>